<resources>
    <string name="app_name">QuiZube</string>
    <string name="sign_with_google">Sign-In with Google</string>
    <string name="sign_with_facebook">Sign-in with Facebook</string>
    <string name="login_with">OR WITH EMAIL</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="quizube">Q  u i Z u b e</string>


    <string name="facebook_app_id">166087761146311</string>
    <string name="fb_login_protocol_scheme">fb166087761146311</string>
    <string name="user_data">user_data</string>
    <string name="user_id">USER ID</string>
    <string name="user_name">USER NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="user_id_already">not available. please choose another</string>
    <string name="not_valid_user_id">not valid</string>
    <string name="enter_email_msg">enter valid email id</string>
    <string name="password_does_not_match">password doesn\'t match</string>
    <string name="server_error">server error please try again later</string>
    <string name="user_id_cannot_be_empty">enter valid user id</string>
    <string name="enter_valid_user_name">enter valid name</string>
    <string name="password_can_be">enter valid password</string>
    <string name="password_length_msg">password length should be between 6 and 20</string>
    <string name="user_id_length_msg">user id length should be between 6 and 30 char</string>
    <string name="welcome_msg">Welcome to QuiZube</string>
    <string name="create_account">New to QuiZube ? Sign up</string>
    <string name="insert_user_id_password">enter user id or email</string>
    <string name="enter_password">enter password</string>
    <string name="user_id_or_email">USER ID OR EMAIL</string>
    <string name="get_start_it">Get started</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="create_account_sign_up">Sign up to get started</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="forgot_password_msg">Enter email address\nassociated with yout account</string>
    <string name="send">Send</string>
    <string name="forgot_password_msg_otp">We will send email you an\none time password to reset account password</string>
    <string name="back_to_login">Back to login</string>
    <string name="insert_email">enter email id</string>
    <string name="re_try">RETRY</string>
    <string name="confirm">Confirm</string>
    <string name="verify_email">Verify your email</string>
    <string name="verify_email_msg">Enter the verification code\njust send you on : </string>
    <string name="resend_email">didn\'t receive email?</string>
    <string name="resend">Resend</string>
    <string name="otp_verify_successfully">OTP Verified Successfully</string>
    <string name="otp_does_not_match">OTP does not match</string>
    <string name="otp_expired">OTP Expired</string>
    <string name="update_password">Update password</string>
    <string name="update">Update</string>
    <string name="send_email_response_obj">send_email_response_obj</string>
    <string name="from_sign_up_key">from_sign_up</string>
    <string name="email_id_key">email_id_key</string>
    <string name="take_user_id">Take user id</string>
    <string name="set_user_id">set user id of your QuiZube acoount</string>
    <string name="looks_good">Looks good</string>
    <string name="is_google_login_key">is_google_login_key</string>
    <string name="is_facebook_login_key">is_facebook_login_key</string>
    <string name="user_obj_key">user_obj_key</string>
    <string name="apkZube">apkZube</string>
    <string name="google_login_fail_msg">Google sign in failed</string>
    <string name="user_id_key">user_id_key</string>
    <string name="no_user_login">No user login.</string>
    <string name="facebook_auth_fail">Authentication failed Facebook.</string>
    <string name="facebook_auth_canceled">Facebook Login Canceled</string>
    <string name="verify_otp_response_obj">verify_otp_response_obj</string>
    <string name="is_password_update_key">is_password_update_key</string>
    <string name="is_for_verify_email">is_for_verify_email</string>
    <string name="password_update_successfully">Password updated Successfully</string>


</resources>
