<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.apkzube.quizube.viewmodel.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/font"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUserId"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:counterMaxLength="6">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_field_higth"
                    android:fontFamily="@font/popin"
                    android:hint="@string/user_id"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:text="@={model.userMst.userId}"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtUserName"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_field_higth"
                    android:fontFamily="@font/popin"
                    android:inputType="textPersonName"
                    android:hint="@string/user_name"
                    android:text="@={model.userMst.userName}"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmailId"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_field_higth"
                    android:fontFamily="@font/popin"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:text="@={model.userMst.emailId}"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPassword"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_field_higth"
                    android:fontFamily="@font/popin"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={model.userMst.password}"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtConfPassword"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_field_higth"
                    android:fontFamily="@font/popin"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:text="@={model.userMst.confPassword}"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/popin"
                android:visibility="gone"
                android:padding="8dp"
                android:textColor="@color/error_text"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnSignUp"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_button_hight"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/popin"
                android:onClick="@{model::registerUser}"
                android:text="@string/sign_up"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>